非同期リクエストが通り、jsonが戻ってきたところまで確認

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/0.bfb22f3a782e45e69bd5.hot-update.js": "/0.bfb22f3a782e45e69bd5.hot-update.js",
-    "/0.a6b93ddd99b21b238daa.hot-update.js": "/0.a6b93ddd99b21b238daa.hot-update.js",
-    "/0.aa76a49ede14a47c1a8a.hot-update.js": "/0.aa76a49ede14a47c1a8a.hot-update.js",
-    "/0.d787c953f5790e5a3015.hot-update.js": "/0.d787c953f5790e5a3015.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
