--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10",
-        "vue-router": "^2.3.0"
+        "vue-router": "^2.8.1"
+    },
+    "dependencies": {
+        "vue-axios": "^2.1.5"
     }
 }
