--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
         "jquery": "^3.1.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.1.10",
-        "vue-router": "^2.8.1"
+        "vue": "^2.1.10"
     },
     "dependencies": {
         "vue-axios": "^2.1.5"
